<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/su_title"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/su_btn"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#1674B3"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.example.salus.ClearEditText
            android:id="@+id/first_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_border"
            android:hint="@string/user_fname"
            android:textColorHint="#626567"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:focusable="true"/>

        <com.example.salus.ClearEditText
            android:id="@+id/last_name"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/user_lname"
            android:textColorHint="#626567"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:focusable="true"/>
    </LinearLayout>

    <com.example.salus.ClearEditText
        android:id="@+id/email_addr"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="64"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#626567"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pw_caution1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/pw_caution1"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/pw_caution2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:text="@string/pw_caution2"
        android:textSize="15sp" />

    <com.example.salus.ClearEditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/pw_hint"
        android:textColorHint="#626567"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:maxLength="64" />

    <TextView
        android:id="@+id/pw_caution3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/pw_caution3"
        android:textSize="15sp" />

    <com.example.salus.ClearEditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_border"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:hint="@string/confirm_hint"
        android:textColorHint="#626567"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:maxLength="64" />

    <!--빈칸을 다 채우면 나타내기-->
    <TextView
        android:id="@+id/sign_up_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/su_caution"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#F6C00F"
        android:visibility="gone"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/su_btn"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>
</LinearLayout>