<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgotPw"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/fpw_title"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_title"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#1674B3"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/fpw_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fpw_caution"
        android:textSize="15sp"
        android:layout_marginStart="28dp"/>

    <com.example.salus.ClearEditText
        android:id="@+id/email_addr"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="64"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#626567"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:background="@drawable/rounded_button"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffff"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffff"/>
    </LinearLayout>
</LinearLayout>