<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/heartrate"
        android:contentDescription="@string/app_name"
        android:layout_width="222dp"
        android:layout_height="93dp"
        android:src="@drawable/heartrate1"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:id="@+id/salus"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_Name"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#1674B3"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <com.example.salus.ClearEditText
        android:id="@+id/email_addr"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_border"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:hint="@string/email_hint"
        android:textColorHint="#626567"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:maxLength="64"
        android:focusable="true"/>

    <com.example.salus.ClearEditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:hint="@string/pw_hint"
        android:textColorHint="#626567"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:maxLength="64" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/si_btn"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#00000000"
            android:text="@string/su_btn"
            android:textStyle="italic"
            android:textColor="#FFFFFF"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/forgotpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:background="#00000000"
            android:text="@string/fpw_btn"
            android:textColor="#FFFFFF"
            android:textStyle="italic"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>