<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://shemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".Main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.81"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:text="@string/main_title"
            android:textColor="#1674B3"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/hr"
            android:textStyle="bold"
            android:textColor="#FFFF"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/air_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="120dp"
            android:text="@string/air_quality"
            android:textStyle="bold"
            android:textColor="#FFFF"
            android:textSize="20sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/heart"
            android:background="#00000000"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_marginStart="50dp">

            <TextView
                android:id="@+id/hr_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textSize="27sp"
                android:textColor="#FFFFFF"
                android:text="100bpm"
                android:textStyle="bold"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="200dp"
                android:layout_toLeftOf="@+id/CO_num"
                android:text="@string/CO"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/CO_num"
                android:layout_width="57dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:layout_alignLeft="@+id/NO2_num"
                android:text="30"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/NO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginStart="200dp"
                android:text="@string/NO2"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/NO2_num"
                android:layout_width="57dp"
                android:layout_height="33dp"
                android:layout_toRightOf="@+id/NO2"
                android:layout_marginTop="45dp"
                android:text="20"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/O3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/O3_num"
                android:text="@string/O3"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/O3_num"
                android:layout_width="57dp"
                android:layout_height="33dp"
                android:layout_alignLeft="@+id/SO2_num"
                android:layout_marginTop="10dp"
                android:text="40"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#000000"/>


            <TextView
                android:id="@+id/SO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_toRightOf="@+id/NO2_num"
                android:text="@string/SO2"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/SO2_num"
                android:layout_width="57dp"
                android:layout_height="33dp"
                android:layout_toRightOf="@+id/SO2"
                android:layout_marginTop="45dp"
                android:text="35"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/pm2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_toLeftOf="@+id/pm2_5_num"
                android:text="@string/pm2_5"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/pm2_5_num"
                android:layout_width="57dp"
                android:layout_height="33dp"
                android:layout_marginTop="80dp"
                android:layout_alignLeft="@+id/pm10_num"
                android:text="15"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/pm10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginStart="240dp"
                android:text="@string/pm10"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/pm10_num"
                android:layout_width="57dp"
                android:layout_height="33dp"
                android:layout_marginTop="110dp"
                android:layout_toRightOf="@+id/pm10"
                android:text="5"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/temp_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="140dp"
                android:layout_marginStart="250dp"
                android:src="@drawable/temperature"/>

            <TextView
                android:id="@+id/temp_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pm10_num"
                android:layout_marginStart="305dp"
                android:text="30'C"
                android:textSize="20sp"
                android:textColor="#000000"/>
        </RelativeLayout>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="10dp"
            android:text="@string/graph"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="200dp"
            android:text="@string/map"/>

        <View
            android:layout_width="380dp"
            android:layout_height="250dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="250dp"
            android:background="#FFFF"/>

        <!--line chart-->
        <!--<include-->
            <!--android:id="@+id/line_chart"-->
            <!--layout="@layout/rt_graph"-->
            <!--android:layout_width="360dp"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginTop="300dp" />-->
        <FrameLayout
            android:id="@+id/sample_content_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:layout_constraintTop_toTopOf="@+id/gl_up"
            tools:layout_editor_absoluteX="16dp" />

    </FrameLayout>
</LinearLayout>